Always display apache brooklyn logo + Fix navbar issue on mobile device

--- a/style/css/_menu.scss
+++ b/style/css/_menu.scss
@@ -1,6 +1,16 @@
 /* WEBSITE MENUS
    ----------------------------------------------------------------------- */
 
+.navbar-brand > img {
+  margin-top: -4px;
+}
+.navbar a.navbar-btn {
+  display: inline-block;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 6px 12px;
+}
+
 /* pop-up top-menu */
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus,
